ES translation of password and town attack settings in admin interface

--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -3454,7 +3454,7 @@
       </notes>
       <segment>
         <source>Verwendung des Schwarzen Bretts verbieten</source>
-        <target>Verwendung des Schwarzen Bretts verbieten</target>
+        <target>Prohibir el uso de la pizarra de héroes</target>
       </segment>
     </unit>
     <unit id="Oxn3AlI" name="Passwort-geschützt">
@@ -3463,7 +3463,7 @@
       </notes>
       <segment>
         <source>Passwort-geschützt</source>
-        <target>Passwort-geschützt</target>
+        <target>Contraseña protegida</target>
       </segment>
     </unit>
     <unit id="TabP5k8" name="Passwort ändern">
@@ -3472,7 +3472,7 @@
       </notes>
       <segment>
         <source>Passwort ändern</source>
-        <target>Passwort ändern</target>
+        <target>Cambiar la contraseña</target>
       </segment>
     </unit>
     <unit id="SvdvL6C" name="Passwort entfernen">
@@ -3481,7 +3481,7 @@
       </notes>
       <segment>
         <source>Passwort entfernen</source>
-        <target>Passwort entfernen</target>
+        <target>Eliminar la contraseña</target>
       </segment>
     </unit>
     <unit id="WgvpXRX" name="Passwort setzen">
@@ -3490,7 +3490,7 @@
       </notes>
       <segment>
         <source>Passwort setzen</source>
-        <target>Passwort setzen</target>
+        <target>Establecer la contraseña</target>
       </segment>
     </unit>
     <unit id="fDbnikT">
@@ -3499,7 +3499,7 @@
       </notes>
       <segment>
         <source>Format: {zombies} (heutiger Angriff) oder {tag}:{zombies} (Angriff an einem bestimmten Tag). Es können keine Tage in der Vergangenheit gewählt werden.</source>
-        <target>Format: {zombies} (heutiger Angriff) oder {tag}:{zombies} (Angriff an einem bestimmten Tag). Es können keine Tage in der Vergangenheit gewählt werden.</target>
+        <target>Formato: {zombies} (ataque del día) o {día}:{zombies} (ataque para un día específico). No es posible elegir días pasados.</target>
       </segment>
     </unit>
     <unit id="mKJLGIS" name="Stärke des Angriffs setzen">
@@ -3508,7 +3508,7 @@
       </notes>
       <segment>
         <source>Stärke des Angriffs setzen</source>
-        <target>Stärke des Angriffs setzen</target>
+        <target>Establecer la fuerza del ataque</target>
       </segment>
     </unit>
     <unit id="oVZvTco" name="Chaos-Modus">
@@ -3517,7 +3517,7 @@
       </notes>
       <segment>
         <source>Chaos-Modus</source>
-        <target>Chaos-Modus</target>
+        <target>Modo caos</target>
       </segment>
     </unit>
     <unit id="cCl3Gqe" name="Stadt zerstören">
@@ -3526,7 +3526,7 @@
       </notes>
       <segment>
         <source>Stadt zerstören</source>
-        <target>Stadt zerstören</target>
+        <target>Devastar el pueblo</target>
       </segment>
     </unit>
   </file>
