--- a/translations/admin.en.xlf
+++ b/translations/admin.en.xlf
@@ -3529,5 +3529,23 @@
         <target>Devastate town</target>
       </segment>
     </unit>
+    <unit id="k_02uKb" name="Ändern des Spielernamens verbieten">
+      <notes>
+        <note category="german">Ändern des Spielernamens verbieten</note>
+      </notes>
+      <segment>
+        <source>Ändern des Spielernamens verbieten</source>
+        <target>Change username</target>
+      </segment>
+    </unit>
+    <unit id="VR0KmfL" name="Spielername">
+      <notes>
+        <note category="german">Spielername</note>
+      </notes>
+      <segment>
+        <source>Spielername</source>
+        <target>Username</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
