--- a/translations/soul.de.xlf
+++ b/translations/soul.de.xlf
@@ -3288,7 +3288,7 @@
     </unit>
     <unit id="nA9SyfS" name="Dafür ist es zu früh!">
       <notes>
-        <note category="german">It is too soon to do this!</note>
+        <note category="german">Dafür ist es zu früh!</note>
       </notes>
       <segment>
         <source>Dafür ist es zu früh!</source>
