Added ICU option in the user settings

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -745,7 +745,7 @@
       </notes>
       <segment>
         <source>Heutige Abschätzung</source>
-        <target></target>
+        <target>Si nuestros cálculos no fallan, en el ataque participarán entre</target>
       </segment>
     </unit>
     <unit id="8N0dl_g" name="Zombies">
@@ -20229,6 +20229,15 @@
         <target>Von den Verteidigungsanlagen der Stadt aufgehalten, gingen eure ehemaligen Mitbürger mit leeren Händen und mampften stattdessen die Überreste ihrer eigenen verrottenden Gliedmaßen.</target>
       </segment>
     </unit>
+    <unit id="mJl9hp7" name="{points} Punkt(e)">
+      <notes>
+        <note category="german">{points} Punkt(e)</note>
+      </notes>
+      <segment>
+        <source>{points} Punkt(e)</source>
+        <target>{points, plural, =0 {# punto} one {1 punto} other {# puntos}}</target>
+      </segment>
+    </unit>
     <unit id=".vM_crK">
       <notes>
         <note category="german">Gestern war ein unbedeutender Tag. Einem Gerücht zufolge wurden {citizen1} und {citizen2} dabei beobachtet, wie sie zusammen im Brunnen badeten. Wenn morgen alle mit einer Pilzinfektion flach liegen, ist ja wohl klar, an wem das lag.</note>
@@ -20661,13 +20670,22 @@
         <target><![CDATA[Die Stadt ist nichts weiter als ein widerwärtiger Friedhof. Es war niemand hier, der den letzten Angriff der Zombies hätte aufhalten können: <strong>das Stadttor wurde aufgebrochen</strong> und <strong>liegt nun in Trümmern</strong>. {town} existiert nicht mehr...]]></target>
       </segment>
     </unit>
-    <unit id="mJl9hp7" name="{points} Punkt(e)">
+    <unit id="uAj26XB" name="Schließen">
       <notes>
-        <note category="german">{points} Punkt(e)</note>
+        <note category="german">Schließen</note>
       </notes>
       <segment>
-        <source>{points} Punkt(e)</source>
-        <target>{points} Punkt(e)</target>
+        <source>Schließen</source>
+        <target>Schließen</target>
+      </segment>
+    </unit>
+    <unit id="olizD4j" name="Global">
+      <notes>
+        <note category="german">Global</note>
+      </notes>
+      <segment>
+        <source>Global</source>
+        <target>Global</target>
       </segment>
     </unit>
   </file>
