--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3223,5 +3223,23 @@
         <target>Du kannst das Schwarze Brett nicht verwenden.</target>
       </segment>
     </unit>
+    <unit id="TTWCiLb" name="Neue Übersetzungen verwenden">
+      <notes>
+        <note category="german">Neue Übersetzungen verwenden</note>
+      </notes>
+      <segment>
+        <source>Neue Übersetzungen verwenden</source>
+        <target>Neue Übersetzungen verwenden</target>
+      </segment>
+    </unit>
+    <unit id="oHq1QSk">
+      <notes>
+        <note category="german">Mit dem neuen Übersetzungssystem werden Texte akkurater in deiner Sprache dargestellt (zum Beispiel die passende Verwendung von Singular und Plural-Formen). Deaktiviere diese Option, um die originalen Texte aus Die Verdammten zu sehen.</note>
+      </notes>
+      <segment>
+        <source>Mit dem neuen Übersetzungssystem werden Texte akkurater in deiner Sprache dargestellt (zum Beispiel die passende Verwendung von Singular und Plural-Formen). Deaktiviere diese Option, um die originalen Texte aus Die Verdammten zu sehen.</source>
+        <target>Mit dem neuen Übersetzungssystem werden Texte akkurater in deiner Sprache dargestellt (zum Beispiel die passende Verwendung von Singular und Plural-Formen). Deaktiviere diese Option, um die originalen Texte aus Die Verdammten zu sehen.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
