--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -3197,5 +3197,23 @@
         <target>Du kannst das Schwarze Brett nicht verwenden.</target>
       </segment>
     </unit>
+    <unit id="TTWCiLb" name="Neue Übersetzungen verwenden">
+      <notes>
+        <note category="german">Neue Übersetzungen verwenden</note>
+      </notes>
+      <segment>
+        <source>Neue Übersetzungen verwenden</source>
+        <target>Utiliser les nouvelles traductions</target>
+      </segment>
+    </unit>
+    <unit id="oHq1QSk">
+      <notes>
+        <note category="german">Mit dem neuen Übersetzungssystem werden Texte akkurater in deiner Sprache dargestellt (zum Beispiel die passende Verwendung von Singular und Plural-Formen). Deaktiviere diese Option, um die originalen Texte aus Die Verdammten zu sehen.</note>
+      </notes>
+      <segment>
+        <source>Mit dem neuen Übersetzungssystem werden Texte akkurater in deiner Sprache dargestellt (zum Beispiel die passende Verwendung von Singular und Plural-Formen). Deaktiviere diese Option, um die originalen Texte aus Die Verdammten zu sehen.</source>
+        <target>Avec le nouveau système de traductions, vous pourrez voir des traductions beaucoup plus précises (comme les formes singulier/pluriel quand nécessaire). Décochez cette option pour avoir les traductions original de Hordes.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
