--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -2951,5 +2951,50 @@
         <target>This user has blocked you, you cannot send them messages any more.</target>
       </segment>
     </unit>
+    <unit id="CHfX5El" name="Bevorzugte Pronomen">
+      <notes>
+        <note category="german">Bevorzugte Pronomen</note>
+      </notes>
+      <segment>
+        <source>Bevorzugte Pronomen</source>
+        <target>Preferred Pronouns</target>
+      </segment>
+    </unit>
+    <unit id="z8t41lP">
+      <notes>
+        <note category="german">Hier kannst du festlegen, welche Personalpronomen das Spiel verwenden soll, wenn es sich auf dich bezieht (z.B. "männlich" für "er", "ihn", etc und "weiblich" für "sie", "ihr", etc).&lt;br /&gt;&lt;em&gt;Diese Einstellung beeinflusst, wie dir und anderen Spielern bestimmte Texte angezeigt werden, wenn die Option "Neue Übersetzungen verwenden" aktiv ist.&lt;/em&gt;.</note>
+      </notes>
+      <segment>
+        <source>Hier kannst du festlegen, welche Personalpronomen das Spiel verwenden soll, wenn es sich auf dich bezieht (z.B. "männlich" für "er", "ihn", etc und "weiblich" für "sie", "ihr", etc).&lt;br /&gt;&lt;em&gt;Diese Einstellung beeinflusst, wie dir und anderen Spielern bestimmte Texte angezeigt werden, wenn die Option "Neue Übersetzungen verwenden" aktiv ist.&lt;/em&gt;.</source>
+        <target><![CDATA[Here you can specify which personal pronouns the game should use when referring to you (e.g. "male" for "he", "him", etc and "female" for "she", "her", etc).<br /><em>This setting affects how certain text is displayed to you and other players when the "Use new translations" option is active.</em>.]]></target>
+      </segment>
+    </unit>
+    <unit id="n6hJSL5" name="Männlich">
+      <notes>
+        <note category="german">Männlich</note>
+      </notes>
+      <segment>
+        <source>Männlich</source>
+        <target>Male</target>
+      </segment>
+    </unit>
+    <unit id="GoQ1yLW" name="Weiblich">
+      <notes>
+        <note category="german">Weiblich</note>
+      </notes>
+      <segment>
+        <source>Weiblich</source>
+        <target>Female</target>
+      </segment>
+    </unit>
+    <unit id="ttkKiaP" name="Keine Präferenz">
+      <notes>
+        <note category="german">Keine Präferenz</note>
+      </notes>
+      <segment>
+        <source>Keine Präferenz</source>
+        <target>No preference</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
