--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -2964,7 +2964,7 @@
       </notes>
       <segment>
         <source>Bevorzugte Pronomen</source>
-        <target>Bevorzugte Pronomen</target>
+        <target>Pronoms préférés</target>
       </segment>
     </unit>
     <unit id="z8t41lP">
@@ -2973,7 +2973,7 @@
       </notes>
       <segment>
         <source>Hier kannst du festlegen, welche Personalpronomen das Spiel verwenden soll, wenn es sich auf dich bezieht (z.B. "männlich" für "er", "ihn", etc und "weiblich" für "sie", "ihr", etc).&lt;br /&gt;&lt;em&gt;Diese Einstellung beeinflusst, wie dir und anderen Spielern bestimmte Texte angezeigt werden, wenn die Option "Neue Übersetzungen verwenden" aktiv ist.&lt;/em&gt;.</source>
-        <target><![CDATA[Hier kannst du festlegen, welche Personalpronomen das Spiel verwenden soll, wenn es sich auf dich bezieht (z.B. "männlich" für "er", "ihn", etc und "weiblich" für "sie", "ihr", etc).<br /><em>Diese Einstellung beeinflusst, wie dir und anderen Spielern bestimmte Texte angezeigt werden, wenn die Option "Neue Übersetzungen verwenden" aktiv ist.</em>.]]></target>
+        <target><![CDATA[Vous pouvez spécifier ici quels pronoms personnels le jeu doit utiliser s’il se réfère à vous (ex : « masculin » pour « il », « lui », etc. et « féminin » pour « elle », « la », etc.<br /><em>Cette option influence la façon dont vous et les autres joueurs affichent certains textes lorsque l’option « Utiliser les nouvelles traductions » est active.</em>.]]></target>
       </segment>
     </unit>
     <unit id="n6hJSL5" name="Männlich">
@@ -2982,7 +2982,7 @@
       </notes>
       <segment>
         <source>Männlich</source>
-        <target>Männlich</target>
+        <target>Masculin</target>
       </segment>
     </unit>
     <unit id="GoQ1yLW" name="Weiblich">
@@ -2991,7 +2991,7 @@
       </notes>
       <segment>
         <source>Weiblich</source>
-        <target>Weiblich</target>
+        <target>Féminin</target>
       </segment>
     </unit>
     <unit id="ttkKiaP" name="Keine Präferenz">
@@ -3000,7 +3000,7 @@
       </notes>
       <segment>
         <source>Keine Präferenz</source>
-        <target>Keine Präferenz</target>
+        <target>Pas de préférence</target>
       </segment>
     </unit>
   </file>
