--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -3212,7 +3212,7 @@
       </notes>
       <segment>
         <source>Mit dem neuen Übersetzungssystem werden Texte akkurater in deiner Sprache dargestellt (zum Beispiel die passende Verwendung von Singular und Plural-Formen). Deaktiviere diese Option, um die originalen Texte aus Die Verdammten zu sehen.</source>
-        <target>Avec le nouveau système de traductions, vous pourrez voir des traductions beaucoup plus précises (comme les formes singulier/pluriel quand nécessaire). Décochez cette option pour avoir les traductions original de Hordes.</target>
+        <target>Avec le nouveau système de traduction, vous pourrez voir des traductions beaucoup plus précises (comme les formes singulier/pluriel quand nécessaire). Décochez cette option pour avoir les traductions originales de Hordes.</target>
       </segment>
     </unit>
     <unit id="N0JgSpD" name="Dein Spielername">
